Bug 200206 - kmail crashed when adding a new contact to the built-in contact manager
Summary: kmail crashed when adding a new contact to the built-in contact manager
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: KResource compat bridges (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kevin Krammer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-14 19:25 UTC by Craig Magina
Modified: 2009-07-16 10:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Craig Magina 2009-07-14 19:25:29 UTC
Application that crashed: kontact
Version of the application: 4.3.0 rc2
KDE Version: 4.2.96 (KDE 4.2.96 (KDE 4.3 RC2))
Qt Version: 4.5.2
Operating System: Linux 2.6.30-8-generic x86_64
Distribution: Ubuntu karmic (development branch)

What I was doing when the application crashed:
I had added a bunch of contacts to the akonadi resource, noticed kopete didn't see those entries to associate friends with, so I went to re-add the contacts to the built-in contact database.  It crashed on the first add to built-in contact database request.

 -- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f2b978a3760 (LWP 4890))]

Thread 2 (Thread 0x7f2b738a3950 (LWP 4999)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:261
#1  0x00007f2b954fe49b in QWaitConditionPrivate::wait (this=<value optimized out>, mutex=0x2b08ed8, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  QWaitCondition::wait (this=<value optimized out>, mutex=0x2b08ed8, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:159
#3  0x00007f2b8e89e71c in QHostInfoAgent::run (this=0x2b08ec0) at kernel/qhostinfo.cpp:260
#4  0x00007f2b954fd3e5 in QThreadPrivate::start (arg=0x2b08ec0) at thread/qthread_unix.cpp:188
#5  0x00007f2b8f19d3ba in start_thread (arg=<value optimized out>) at pthread_create.c:297
#6  0x00007f2b94f051bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f2b978a3760 (LWP 4890)):
[KCrash Handler]
#5  QMetaObject::activate (sender=0x0, m=<value optimized out>, local_signal_index=0, argv=0x7fff52b7f0d0) at kernel/qobject.cpp:3183
#6  0x00007f2b9292232f in KABC::AddressBook::addressBookChanged (this=0x7f2b92b87c80, _t1=0x0) at ./addressbook.moc:105
#7  0x00007f2b6ee73793 in ?? () from /usr/lib/kde4/kabc_akonadi.so
#8  0x00007f2b6ee75d54 in ?? () from /usr/lib/kde4/kabc_akonadi.so
#9  0x00007f2b955f8e1c in QMetaObject::activate (sender=0x4a732f0, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x7f2b95678840) at kernel/qobject.cpp:3113
#10 0x00007f2b6ee7c16a in ?? () from /usr/lib/kde4/kabc_akonadi.so
#11 0x00007f2b6ee7db84 in ?? () from /usr/lib/kde4/kabc_akonadi.so
#12 0x00007f2b6ee94c7c in ?? () from /usr/lib/kde4/kabc_akonadi.so
#13 0x00007f2b6ee79a11 in ?? () from /usr/lib/kde4/kabc_akonadi.so
#14 0x00007f2b6ee81794 in ?? () from /usr/lib/kde4/kabc_akonadi.so
#15 0x00007f2b955f8e1c in QMetaObject::activate (sender=0x13774d0, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x7f2b95678840) at kernel/qobject.cpp:3113
#16 0x00007f2b73d8a46a in Akonadi::Monitor::itemAdded (this=0x7f2b92b87c80, _t1=<value optimized out>, _t2=<value optimized out>) at ./monitor.moc:159
#17 0x00007f2b73d8e3ef in Akonadi::MonitorPrivate::emitItemNotification (this=0x329c940, msg=..., item=..., collection=<value optimized out>, collectionDest=<value optimized out>)
    at ../../akonadi/monitor_p.cpp:199
#18 0x00007f2b73d8e90d in Akonadi::MonitorPrivate::slotItemJobFinished (this=0x329c940, job=0x4a78de0) at ../../akonadi/monitor_p.cpp:274
#19 0x00007f2b73d8a575 in Akonadi::Monitor::qt_metacall (this=0x13774d0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff52b7fc70) at ./monitor.moc:132
#20 0x00007f2b955f8e1c in QMetaObject::activate (sender=0x4a78de0, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x7f2b95678840) at kernel/qobject.cpp:3113
#21 0x00007f2b959ce4b2 in KJob::result (this=0x7f2b92b87c80, _t1=0x4a78de0) at ./kjob.moc:188
#22 0x00007f2b959ce82f in KJob::emitResult (this=0x4a78de0) at ../../kdecore/jobs/kjob.cpp:304
#23 0x00007f2b73d8c987 in Akonadi::ItemCollectionFetchJob::itemJobDone (this=0x4a78de0, job=<value optimized out>) at ../../akonadi/monitor_p.cpp:384
#24 0x00007f2b73d8cea4 in Akonadi::ItemCollectionFetchJob::qt_metacall (this=0x4a78de0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff52b7fe40) at ./monitor_p.moc:73
#25 0x00007f2b955f8e1c in QMetaObject::activate (sender=0x2f4dfa0, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x7f2b95678840) at kernel/qobject.cpp:3113
#26 0x00007f2b959ce4b2 in KJob::result (this=0x7f2b92b87c80, _t1=0x2f4dfa0) at ./kjob.moc:188
#27 0x00007f2b959ce82f in KJob::emitResult (this=0x2f4dfa0) at ../../kdecore/jobs/kjob.cpp:304
#28 0x00007f2b73d86613 in Akonadi::JobPrivate::handleResponse (this=<value optimized out>, tag=..., data=<value optimized out>) at ../../akonadi/job.cpp:67
#29 0x00007f2b73d864a7 in Akonadi::JobPrivate::handleResponse (this=<value optimized out>, tag=..., data=...) at ../../akonadi/job.cpp:49
#30 0x00007f2b73da6f1c in Akonadi::SessionPrivate::dataReceived (this=0x2b2b490) at ../../akonadi/session.cpp:121
#31 0x00007f2b73da7be5 in Akonadi::Session::qt_metacall (this=0x2bfbda0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff52b801e0) at ./session.moc:81
#32 0x00007f2b955f8e1c in QMetaObject::activate (sender=0x308b3a0, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x7f2b95678840) at kernel/qobject.cpp:3113
#33 0x00007f2b9562dca8 in QIODevice::qt_metacall (this=0x308b3a0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff52b80320) at .moc/release-shared/moc_qiodevice.cpp:71
#34 0x00007f2b8e8c1180 in QLocalSocket::qt_metacall (this=0x7f2b92b87c80, _c=QMetaObject::QueryPropertyDesignable, _id=0, _a=0x7f2b95678840) at .moc/release-shared/moc_qlocalsocket.cpp:75
#35 0x00007f2b955f8e1c in QMetaObject::activate (sender=0x24efc48, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x7f2b95678840) at kernel/qobject.cpp:3113
#36 0x00007f2b8e8bbcff in QAbstractSocketPrivate::canReadNotification (this=0x32b7920) at socket/qabstractsocket.cpp:604
#37 0x00007f2b8e8aae91 in QReadNotifier::event (this=<value optimized out>, e=0x4) at socket/qnativesocketengine.cpp:1036
#38 0x00007f2b95efd62c in QApplicationPrivate::notify_helper (this=0x1339d00, receiver=0x24efe80, e=0x7fff52b80760) at kernel/qapplication.cpp:4056
#39 0x00007f2b95f048fe in QApplication::notify (this=0x7fff52b81fb0, receiver=0x24efe80, e=0x7fff52b80760) at kernel/qapplication.cpp:4021
#40 0x00007f2b96b333f6 in KApplication::notify (this=0x7fff52b81fb0, receiver=0x24efe80, event=0x7fff52b80760) at ../../kdeui/kernel/kapplication.cpp:302
#41 0x00007f2b955e3c6c in QCoreApplication::notifyInternal (this=0x7fff52b81fb0, receiver=0x24efe80, event=0x7fff52b80760) at kernel/qcoreapplication.cpp:610
#42 0x00007f2b9560c47a in QCoreApplication::sendEvent (source=0x13357b0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#43 socketNotifierSourceDispatch (source=0x13357b0) at kernel/qeventdispatcher_glib.cpp:110
#44 0x00007f2b8f3ed9fe in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#45 0x00007f2b8f3f13c8 in ?? () from /usr/lib/libglib-2.0.so.0
#46 0x00007f2b8f3f14f0 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#47 0x00007f2b9560c1f6 in QEventDispatcherGlib::processEvents (this=0x130aae0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#48 0x00007f2b95f91ace in QGuiEventDispatcherGlib::processEvents (this=0x7f2b92b87c80, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#49 0x00007f2b955e2572 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#50 0x00007f2b955e2944 in QEventLoop::exec (this=0x7fff52b809c0, flags=) at kernel/qeventloop.cpp:201
#51 0x00007f2b96377dee in QDialog::exec (this=0x47d2ce0) at dialogs/qdialog.cpp:498
#52 0x00007f2b96ab9435 in KMessageBox::createKMessageBox (dialog=<value optimized out>, icon=<value optimized out>, text=<value optimized out>, strlist=<value optimized out>, 
    ask=<value optimized out>, checkboxReturn=<value optimized out>, options=) at ../../kdeui/dialogs/kmessagebox.cpp:331
#53 0x00007f2b96aba6b0 in KMessageBox::createKMessageBox (dialog=<value optimized out>, icon=QMessageBox::Information, text=<value optimized out>, strlist=<value optimized out>, ask=..., 
    checkboxReturn=0x7fff52b8105f, options=..., details=...) at ../../kdeui/dialogs/kmessagebox.cpp:151
#54 0x00007f2b96abbe41 in KMessageBox::informationListWId (parent_id=46137369, text=<value optimized out>, strlist=..., caption=..., dontShowAgainName=..., options=)
    at ../../kdeui/dialogs/kmessagebox.cpp:1008
#55 0x00007f2b96abbfaf in KMessageBox::informationList (parent=<value optimized out>, text=..., strlist=..., caption=..., dontShowAgainName=..., options=<value optimized out>)
    at ../../kdeui/dialogs/kmessagebox.cpp:977
#56 0x00007f2b96abc000 in KMessageBox::information (parent=0x7f2b92b87c80, text=..., caption=<value optimized out>, dontShowAgainName=<value optimized out>, options=<value optimized out>)
    at ../../kdeui/dialogs/kmessagebox.cpp:964
#57 0x00007f2b96ffd77c in KPIM::KAddrBookExternal::addEmail (addr=<value optimized out>, parent=<value optimized out>) at ../../libkdepim/kaddrbookexternal.cpp:99
#58 0x00007f2b802b5a6a in KMMailtoAddAddrBookCommand::execute (this=0x4a6bef0) at ../../kmail/kmcommands.cpp:564
#59 0x00007f2b802afb6a in KMCommand::slotPostTransfer (this=0x4a6bef0, result=KMCommand::OK) at ../../kmail/kmcommands.cpp:273
#60 0x00007f2b802b9a53 in KMCommand::qt_metacall (this=0x4a6bef0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff52b81410) at ./kmcommands.moc:87
#61 0x00007f2b955f8e1c in QMetaObject::activate (sender=0x4a6bef0, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x7f2b95678840) at kernel/qobject.cpp:3113
#62 0x00007f2b802acd3e in KMCommand::messagesTransfered (this=0x7f2b92b87c80, _t1=KMCommand::OK) at ./kmcommands.moc:102
#63 0x00007f2b802c8218 in KMCommand::transferSelectedMsgs (this=0x4a6bef0) at ../../kmail/kmcommands.cpp:367
#64 0x00007f2b802c843f in KMCommand::slotStart (this=0x4a6bef0) at ../../kmail/kmcommands.cpp:265
#65 0x00007f2b802b9a36 in KMCommand::qt_metacall (this=0x4a6bef0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff52b81640) at ./kmcommands.moc:86
#66 0x00007f2b955f8e1c in QMetaObject::activate (sender=0x418d3c0, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0x7f2b95678840) at kernel/qobject.cpp:3113
#67 0x00007f2b955fde5f in QSingleShotTimer::timerEvent (this=0x418d3c0) at kernel/qtimer.cpp:298
#68 0x00007f2b955f2dc3 in QObject::event (this=0x418d3c0, e=0x4) at kernel/qobject.cpp:1075
#69 0x00007f2b95efd62c in QApplicationPrivate::notify_helper (this=0x1339d00, receiver=0x418d3c0, e=0x7fff52b81c50) at kernel/qapplication.cpp:4056
#70 0x00007f2b95f048fe in QApplication::notify (this=0x7fff52b81fb0, receiver=0x418d3c0, e=0x7fff52b81c50) at kernel/qapplication.cpp:4021
#71 0x00007f2b96b333f6 in KApplication::notify (this=0x7fff52b81fb0, receiver=0x418d3c0, event=0x7fff52b81c50) at ../../kdeui/kernel/kapplication.cpp:302
#72 0x00007f2b955e3c6c in QCoreApplication::notifyInternal (this=0x7fff52b81fb0, receiver=0x418d3c0, event=0x7fff52b81c50) at kernel/qcoreapplication.cpp:610
#73 0x00007f2b9560e912 in QCoreApplication::sendEvent (this=0x1335880) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#74 QTimerInfoList::activateTimers (this=0x1335880) at kernel/qeventdispatcher_unix.cpp:572
#75 0x00007f2b9560c2ad in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:165
#76 0x00007f2b8f3ed9fe in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#77 0x00007f2b8f3f13c8 in ?? () from /usr/lib/libglib-2.0.so.0
#78 0x00007f2b8f3f14f0 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#79 0x00007f2b9560c1f6 in QEventDispatcherGlib::processEvents (this=0x130aae0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#80 0x00007f2b95f91ace in QGuiEventDispatcherGlib::processEvents (this=0x7f2b92b87c80, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#81 0x00007f2b955e2572 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#82 0x00007f2b955e2944 in QEventLoop::exec (this=0x7fff52b81ef0, flags=) at kernel/qeventloop.cpp:201
#83 0x00007f2b955e4af9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#84 0x0000000000403f27 in main (argc=<value optimized out>, argv=<value optimized out>) at ../../../kontact/src/main.cpp:218

Reported using DrKonqi
Comment 1 Kevin Krammer 2009-07-15 22:02:41 UTC
Thanks a lot for reporting this!
Confirmed, reassing to myself
Comment 2 Kevin Krammer 2009-07-16 10:33:04 UTC
SVN commit 997634 by krake:

Need to handle clear() in the type specific subclass because distribution list destructors also call public API.
During clear those need to be handled as internal changes and must not be forwarded to the base class' implementation.

BUG: 200206


 M  +17 -0     resourceakonadi_p.cpp  
 M  +2 -0      resourceakonadi_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=997634
Comment 3 Kevin Krammer 2009-07-16 10:34:37 UTC
SVN commit 997637 by krake:

Backport of r997634

Need to handle clear() in the type specific subclass because distribution list destructors also call public API.
During clear those need to be handled as internal changes and must not be forwarded to the base class' implementation.

CCBUG: 200206



 M  +17 -0     resourceakonadi_p.cpp  
 M  +2 -0      resourceakonadi_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=997637