Need to handle clear() in the type specific subclass because distribution list destructors also call public API. During clear those need to be handled as internal changes and must not be forwarded to the base class' implementation.

BUG: 200206

svn path=/trunk/KDE/kdepim/akonadi/; revision=997634